tests/ui/rfcs/rfc-2632-const-trait-impl/const-default-method-bodies.stderr
warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/const-default-method-bodies.rs:1:30
   |
LL | #![feature(const_trait_impl, effects)]
   |                              ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: the trait bound `Runtime: ~const Compat` is not satisfied
  --> $DIR/const-default-method-bodies.rs:24:18
   |
LL |     NonConstImpl.a();
   |                  ^ the trait `~const Compat` is not implemented for `Runtime`
   |
   = help: the trait `Compat` is implemented for `Runtime`
note: required by a bound in `ConstDefaultFn::a`
  --> $DIR/const-default-method-bodies.rs:3:1
   |
LL | #[const_trait]
   | ^^^^^^^^^^^^^^ required by this bound in `ConstDefaultFn::a`
...
LL |     fn a(self) {
   |        - required by a bound in this associated function

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
